@@ -4,7 +4,7 @@ class Knowledgeroot_Db {
 	public static function true() {
 		$db = Knowledgeroot_Registry::get('db');
 
-		if($db instanceof Zend_Db_Adapter_Pdo_Sqlite) {
+		if($db instanceof Zend_Db_Adapter_Pdo_Sqlite || $db instanceof Zend_Db_Adapter_Sqlsrv) {
 			return 1;
 		} else {
 			return 'true';
@@ -14,7 +14,7 @@ class Knowledgeroot_Db {
 	public static function false() {
 		$db = Knowledgeroot_Registry::get('db');
 
-		if($db instanceof Zend_Db_Adapter_Pdo_Sqlite) {
+		if($db instanceof Zend_Db_Adapter_Pdo_Sqlite || $db instanceof Zend_Db_Adapter_Sqlsrv) {
 			return 0;
 		} else {
 			return 'false';
